[gd_scene load_steps=10 format=3 uid="uid://dc4sqs8vg7pni"]

[ext_resource type="Script" path="res://Scripts/button_general.gd" id="1_fp42k"]
[ext_resource type="Texture2D" uid="uid://cssc22wddrc4e" path="res://Assets/Graphics/sprites/sprites_other.png" id="2_vdgng"]
[ext_resource type="AudioStream" uid="uid://dnjdf4yd60wnx" path="res://Assets/Sounds/sfx/button_pressed.wav" id="3_x6vch"]

[sub_resource type="Animation" id="Animation_47lem"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 32)]
}

[sub_resource type="Animation" id="Animation_0ql62"]
resource_name = "button_back_DOWN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 32), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2cik6"]
resource_name = "button_pressed_DOWN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l3fps"]
_data = {
"RESET": SubResource("Animation_47lem"),
"button_back_DOWN": SubResource("Animation_0ql62"),
"button_pressed_DOWN": SubResource("Animation_2cik6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gk7p3"]
size = Vector2(64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iushe"]
size = Vector2(60, 20)

[node name="button_green_root" type="Node2D" groups=["Persist", "button", "resetButton_green"]]
z_index = -1
script = ExtResource("1_fp42k")
pressed = true
button_type = "reset_green"

[node name="button_green" type="StaticBody2D" parent="." groups=["button", "resetButton_green"]]
z_index = 1
position = Vector2(0, 32)
collision_layer = 3
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="button_green"]
texture = ExtResource("2_vdgng")
region_enabled = true
region_rect = Rect2(1856, 320, 64, 64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="button_green/Sprite2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_l3fps")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="button_green"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_gk7p3")

[node name="Area2D" type="Area2D" parent="button_green"]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="button_green/Area2D"]
shape = SubResource("RectangleShape2D_iushe")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true

[node name="sound_buttonPressed" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_x6vch")

[connection signal="area_entered" from="button_green/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
